# raft-consensus

./: .gitignore  CMakeLists.txt  Messenger.h  Networker.cpp  Networker.h  README.md  Server.cpp  cleanup.py  main.cpp  raft_RPCs.pb.cc  raft_RPCs.pb.h  raft_RPCs.proto  server-main.cpp  server_list
src/: BlockingQueue.h  Client.cpp  Client.h  Log.cpp  Log.h  Messenger.cpp  Messenger.h  Networker.cpp  Networker.h  PersistentStorage.h  RaftLog.h  RaftPersistentState.proto  RaftRPC.proto  Server.cpp  Server.h  TestDriver.cpp  TimedCallback.cpp  TimedCallback.h  Timer.cpp  Timer.h  client-main.cpp  log-tests.cpp  main.cpp  server-main.cpp  util.cpp  util.h
src/StateMachines/: KVStateMachine.h  ShellCommandStateMachine.h  StateMachine.h
